fix(e2e): RealLlmChatTestHandler uses StreamingSessions.start + RawMessage First run captured zero events because the handler rolled its own hand-written JSON frames via a custom BroadcasterStreamingSession, but AiWsClient expects the standard Atmosphere AI frame format produced by StreamingSessions.start(resource). Mirrors MultiModalTestHandler's pattern: onRequest suspends and spawns a VT, the VT grabs a proper StreamingSession and calls runtime.execute, onStateChange writes RawMessage payloads to the response body.