@@ -17,12 +17,15 @@ package org.atmosphere.integrationtests.ai.real;
 
 import org.atmosphere.ai.AgentExecutionContext;
 import org.atmosphere.ai.AiConfig;
-import org.atmosphere.ai.StreamingSession;
+import org.atmosphere.ai.StreamingSessions;
 import org.atmosphere.ai.approval.ToolApprovalPolicy;
 import org.atmosphere.ai.llm.BuiltInAgentRuntime;
 import org.atmosphere.cpr.AtmosphereHandler;
 import org.atmosphere.cpr.AtmosphereResource;
 import org.atmosphere.cpr.AtmosphereResourceEvent;
+import org.atmosphere.cpr.RawMessage;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.util.List;
@@ -33,22 +36,23 @@ import java.util.UUID;
  * Real-LLM e2e handler that routes prompts through a live
  * {@link BuiltInAgentRuntime} talking to whatever OpenAI-compatible
  * endpoint is configured via {@code LLM_BASE_URL} + {@code LLM_API_KEY}.
- * Used by the Tier-1 Ollama workflow and Tier-2 paid workflow alike —
- * the only thing that changes between tiers is the environment variables.
  *
- * <p>Structural assertions only: the Playwright spec checks that the
- * response streams at least one text delta and completes within the
- * configured timeout. Content assertions are intentionally avoided so
- * the test is stable across model versions and providers.</p>
+ * <p>Mirrors {@code MultiModalTestHandler}'s wire pattern:
+ * {@code onRequest} suspends the resource and spawns a VT that grabs a
+ * proper {@code StreamingSession} via {@link StreamingSessions#start},
+ * then calls {@code runtime.execute(context, session)}. Frames are
+ * delivered via {@link AtmosphereHandler#onStateChange} which writes
+ * {@link RawMessage} payloads to the response body so the Playwright
+ * {@code AiWsClient} sees them in the standard Atmosphere AI frame
+ * format.</p>
  */
 public class RealLlmChatTestHandler implements AtmosphereHandler {
+
+    private static final Logger logger = LoggerFactory.getLogger(RealLlmChatTestHandler.class);
 
     private final BuiltInAgentRuntime runtime;
 
     public RealLlmChatTestHandler() {
-        // Build a standalone runtime pointing at the configured endpoint.
-        // CI env vars LLM_BASE_URL + LLM_API_KEY + LLM_MODEL drive AiConfig
-        // which BuiltInAgentRuntime reads at configure() time.
         if (AiConfig.get() == null) {
             AiConfig.fromEnvironment();
         }
@@ -61,86 +65,53 @@ public class RealLlmChatTestHandler implements AtmosphereHandler {
 
     @Override
     public void onRequest(AtmosphereResource resource) throws IOException {
-        var req = resource.getRequest();
-        if ("POST".equalsIgnoreCase(req.getMethod())) {
-            var body = req.getReader().lines().reduce("", (a, b) -> a + b);
-            if (body == null || body.isBlank()) {
-                body = "Say hello";
-            }
-            var session = new BroadcasterStreamingSession(resource);
+        resource.suspend();
+
+        var reader = resource.getRequest().getReader();
+        var prompt = reader.readLine();
+        if (prompt == null || prompt.trim().isEmpty()) {
+            prompt = "Say hello in one short sentence.";
+        }
+        var finalPrompt = prompt.trim();
+        Thread.ofVirtual().name("real-llm-chat").start(() -> handlePrompt(finalPrompt, resource));
+    }
+
+    private void handlePrompt(String prompt, AtmosphereResource resource) {
+        var session = StreamingSessions.start(resource);
+        try {
             var context = new AgentExecutionContext(
-                    body, "You are a concise assistant. Reply in one short sentence.",
-                    null, null, UUID.randomUUID().toString(), "user-1", "conv-1",
+                    prompt,
+                    "You are a concise assistant. Reply in one short sentence.",
+                    null,
+                    null, UUID.randomUUID().toString(), "user-1", "conv-1",
                     List.of(), null, null, List.of(), Map.of(),
                     List.of(), null, null, List.of(), List.of(),
                     ToolApprovalPolicy.annotated());
-            try {
-                runtime.execute(context, session);
-            } catch (Exception e) {
-                session.error(e);
+            runtime.execute(context, session);
+            if (!session.isClosed()) {
+                session.complete();
             }
-        } else {
-            resource.suspend();
+        } catch (Exception e) {
+            logger.error("Real LLM execution failed", e);
+            session.error(e);
         }
     }
 
     @Override
     public void onStateChange(AtmosphereResourceEvent event) throws IOException {
-        var r = event.getResource();
-        var msg = event.getMessage();
-        if (msg != null && r.getResponse() != null) {
-            r.getResponse().write(msg.toString());
+        if (event.isCancelled() || event.isResumedOnTimeout()
+                || event.isClosedByClient() || event.isClosedByApplication()) {
+            return;
+        }
+        var message = event.getMessage();
+        if (message instanceof RawMessage raw && raw.message() instanceof String json) {
+            event.getResource().getResponse().write(json);
+            event.getResource().getResponse().flushBuffer();
         }
     }
 
     @Override
-    public void destroy() { }
-
-    /** Minimal StreamingSession that broadcasts every token via the resource's broadcaster. */
-    private static final class BroadcasterStreamingSession implements StreamingSession {
-        private final AtmosphereResource resource;
-        private volatile boolean closed;
-        private volatile boolean errored;
-
-        BroadcasterStreamingSession(AtmosphereResource resource) {
-            this.resource = resource;
-        }
-
-        @Override public String sessionId() { return resource.uuid(); }
-
-        @Override
-        public void send(String text) {
-            resource.getBroadcaster().broadcast(
-                    "{\"type\":\"text-delta\",\"text\":" + quote(text) + "}\n");
-        }
-
-        @Override public void sendMetadata(String key, Object value) { }
-        @Override public void progress(String message) { }
-
-        @Override
-        public void complete() {
-            resource.getBroadcaster().broadcast("{\"type\":\"complete\"}\n");
-            closed = true;
-        }
-
-        @Override
-        public void complete(String summary) { complete(); }
-
-        @Override
-        public void error(Throwable t) {
-            errored = true;
-            resource.getBroadcaster().broadcast(
-                    "{\"type\":\"error\",\"message\":" + quote(t.getMessage()) + "}\n");
-            closed = true;
-        }
-
-        @Override public boolean isClosed() { return closed; }
-        @Override public boolean hasErrored() { return errored; }
-
-        private static String quote(String s) {
-            if (s == null) return "null";
-            return "\"" + s.replace("\\", "\\\\").replace("\"", "\\\"")
-                    .replace("\n", "\\n").replace("\r", "\\r") + "\"";
-        }
+    public void destroy() {
+        // no resources to release
     }
 }
